--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ python-dateutil==2.8.2
 requests==2.27.1
 requests-oauthlib==1.3.1
 rsa==4.8
+scipy==1.8.1
 six==1.16.0
 tensorboard==2.9.0
 tensorboard-data-server==0.6.1
